--- a/src/app/pages/check-out/check-out.component.html
+++ b/src/app/pages/check-out/check-out.component.html
@@ -86,6 +86,20 @@
           <p class="mb-0">Payment Method</p>
         </div>
         <p class="mdt">Please choose the payment method</p>
+        <div class="row mb-3">
+            <div class="col-2 ps-0">
+              <img src="./assets/img/check-out/Mastercard.png"/>
+            </div>
+            <div class="col-2 ps-0">
+              <img src="./assets/img/check-out/PayPal.png"/>
+            </div>
+            <div class="col-2 ps-0">
+              <img src="./assets/img/check-out/Visa.png"/>
+            </div>
+          <div class="col-2"></div>
+          <div class="col-2"></div>
+          <div class="col-2 pe-0"></div>
+        </div>
         <div class="px-0 user-input">
           <label>Card number</label>
           <input class="inpu" type="text" required><br>
