--- a/src/app/pages/thank-you/thank-you.component.html
+++ b/src/app/pages/thank-you/thank-you.component.html
@@ -14,7 +14,7 @@
         <button class="btn btnlg btn-sec w-100">View detail order</button>
       </div>
       <div class="col-6">
-        <button class="btn btnlg btn-pri w-100">Continue shopping</button>
+        <button routerLink="/shop-all" class="btn btnlg btn-pri w-100">Continue shopping</button>
       </div>
     </div>
     <div class="col-3"></div>
