--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -73,7 +73,7 @@
 }
 /*about*/
 .about{
-  background-image: url("/assets/img/guide/insurance.png");
+  background-image: url("/assets/img/home/about.png");
   background-size: cover;
   padding-top:100px;
   padding-bottom:100px;
