--- a/src/app/pages/category/category.component.html
+++ b/src/app/pages/category/category.component.html
@@ -8,7 +8,7 @@
       <div class="sub-cate-box">
         <div class="sub-cate-img">
           <a routerLink="/sub-category/{{item.sid}}">
-            <img src="./assets/img/cate-deco/{{cid}}.{{item.sid}}.png" />
+            <img src="./assets/img/cate-deco/{{item.cid}}.{{item.sid}}.png" />
           </a>
         </div>
         <div class="sub-name">
