--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -160,12 +160,12 @@
     <div class="carousel-inner container">
       <div class="carousel-item active" data-bs-interval="6000">
         <div class="row">
-          <div class="col-3">
+          <div class="col-3" *ngFor="let item of bestSeller | slice: 0: 4">
             <div class="item-card-info">
               <div class="card-prd">
                 <div class="img">
-                  <a href="#">
-                    <img src="./assets/img/product-detail/also-like1.png">
+                  <a routerLink="/product-detail/{{item.pid}}">
+                    <img src="{{item.thumb}}">
                   </a>
                 </div>
                 <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
@@ -173,62 +173,8 @@
                 </div>
               </div>
               <div class="item-inf text-center mt-2">
-                <p class="mdt mb-1">Lynn Ring</p>
-                <p class="smt">$7,000</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="item-card-info">
-              <div class="card-prd">
-                <div class="img">
-                  <a href="#">
-                    <img src="./assets/img/product-detail/also-like2.png">
-                  </a>
-                </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
-                  Quick view
-                </div>
-              </div>
-              <div class="item-inf text-center mt-2">
-                <p class="mdt mb-1">Lynn Ring</p>
-                <p class="smt">$7,000</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="item-card-info">
-              <div class="card-prd">
-                <div class="img">
-                  <a href="#">
-                    <img src="./assets/img/product-detail/also-like3.png">
-                  </a>
-                </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
-                  Quick view
-                </div>
-              </div>
-              <div class="item-inf text-center mt-2">
-                <p class="mdt mb-1">Lynn Ring</p>
-                <p class="smt">$7,000</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="item-card-info">
-              <div class="card-prd">
-                <div class="img">
-                  <a href="#">
-                    <img src="./assets/img/product-detail/also-like4.png">
-                  </a>
-                </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
-                  Quick view
-                </div>
-              </div>
-              <div class="item-inf text-center mt-2">
-                <p class="mdt mb-1">Lynn Ring</p>
-                <p class="smt">$7,000</p>
+                <p class="mdt mb-1">{{item.name}}</p>
+                <p class="smt">{{item.price | currency:'USD'}}</p>
               </div>
             </div>
           </div>
@@ -236,12 +182,12 @@
       </div>
       <div class="carousel-item" data-bs-interval="5000">
         <div class="row">
-          <div class="col-3">
+          <div class="col-3" *ngFor="let item of bestSeller | slice: 4: 8">
             <div class="item-card-info">
               <div class="card-prd">
                 <div class="img">
-                  <a href="#">
-                    <img src="./assets/img/product-detail/also-like5.png">
+                  <a routerLink="/product-detail/{{item.pid}}">
+                    <img src="{{item.thumb}}">
                   </a>
                 </div>
                 <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
@@ -249,62 +195,8 @@
                 </div>
               </div>
               <div class="item-inf text-center mt-2">
-                <p class="mdt mb-1">Lynn Ring</p>
-                <p class="smt">$7,000</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="item-card-info">
-              <div class="card-prd">
-                <div class="img">
-                  <a href="#">
-                    <img src="./assets/img/product-detail/also-like6.png">
-                  </a>
-                </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
-                  Quick view
-                </div>
-              </div>
-              <div class="item-inf text-center mt-2">
-                <p class="mdt mb-1">Lynn Ring</p>
-                <p class="smt">$7,000</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="item-card-info">
-              <div class="card-prd">
-                <div class="img">
-                  <a href="#">
-                    <img src="./assets/img/product-detail/also-like7.png">
-                  </a>
-                </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
-                  Quick view
-                </div>
-              </div>
-              <div class="item-inf text-center mt-2">
-                <p class="mdt mb-1">Lynn Ring</p>
-                <p class="smt">$7,000</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="item-card-info">
-              <div class="card-prd">
-                <div class="img">
-                  <a href="#">
-                    <img src="./assets/img/product-detail/also-like8.png">
-                  </a>
-                </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
-                  Quick view
-                </div>
-              </div>
-              <div class="item-inf text-center mt-2">
-                <p class="mdt mb-1">Lynn Ring</p>
-                <p class="smt">$7,000</p>
+                <p class="mdt mb-1">{{item.name}}</p>
+                <p class="smt">{{item.price | currency:'USD'}}</p>
               </div>
             </div>
           </div>
@@ -312,12 +204,12 @@
       </div>
       <div class="carousel-item" data-bs-interval="5000">
         <div class="row">
-          <div class="col-3">
+          <div class="col-3" *ngFor="let item of bestSeller | slice: 8: 12">
             <div class="item-card-info">
               <div class="card-prd">
                 <div class="img">
-                  <a href="#">
-                    <img src="./assets/img/product-detail/also-like5.png">
+                  <a routerLink="/product-detail/{{item.pid}}">
+                    <img src="{{item.thumb}}">
                   </a>
                 </div>
                 <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
@@ -325,62 +217,8 @@
                 </div>
               </div>
               <div class="item-inf text-center mt-2">
-                <p class="mdt mb-1">Lynn Ring</p>
-                <p class="smt">$7,000</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="item-card-info">
-              <div class="card-prd">
-                <div class="img">
-                  <a href="#">
-                    <img src="./assets/img/product-detail/also-like6.png">
-                  </a>
-                </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
-                  Quick view
-                </div>
-              </div>
-              <div class="item-inf text-center mt-2">
-                <p class="mdt mb-1">Lynn Ring</p>
-                <p class="smt">$7,000</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="item-card-info">
-              <div class="card-prd">
-                <div class="img">
-                  <a href="#">
-                    <img src="./assets/img/product-detail/also-like7.png">
-                  </a>
-                </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
-                  Quick view
-                </div>
-              </div>
-              <div class="item-inf text-center mt-2">
-                <p class="mdt mb-1">Lynn Ring</p>
-                <p class="smt">$7,000</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="item-card-info">
-              <div class="card-prd">
-                <div class="img">
-                  <a href="#">
-                    <img src="./assets/img/product-detail/also-like8.png">
-                  </a>
-                </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
-                  Quick view
-                </div>
-              </div>
-              <div class="item-inf text-center mt-2">
-                <p class="mdt mb-1">Lynn Ring</p>
-                <p class="smt">$7,000</p>
+                <p class="mdt mb-1">{{item.name}}</p>
+                <p class="smt">{{item.price | currency:'USD'}}</p>
               </div>
             </div>
           </div>
@@ -457,6 +295,7 @@
     </div>
   </div>
 </div>
+
 <!--All-jewellery-->
 <div class="container">
   <div class="all-jewelery mbt-120">
