--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -53,12 +53,19 @@
 
 <!--Map here-->
 <div class="aguri-info container">
-  <div>
-    <h5 class="text-center mb-3">Come and visit us</h5>
+  <div class="text-center">
+    <h5 class="mb-2">Come and visit us</h5>
+    <p class="smt mb-4"><i class="fas fa-map-marker-alt fa-lg"></i> 6901 Hollywood Blvd, LA, CA 90028, US</p>
   </div>
-    <div>
-      <agm-map [latitude]=34.102345 [longitude]=-118.340389 [zoom]=10></agm-map>
+  <div class="row">
+    <div class="col-1"></div>
+    <div class="col-10">
+      <div>
+        <agm-map [latitude]=34.102345 [longitude]=-118.340389 [zoom]=10></agm-map>
+      </div>
     </div>
+    <div class="col-1"></div>
+  </div>
 </div>
 
 
