--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -251,76 +251,80 @@
             Compare
           </div>
         </div>
+
+        <!-- Modal Compare-->
+        <div class="modal fade" id="compare">
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+              <h5 class="modal-title" id="exampleModalLabel">Compare Products</h5>
+              <div class="row">
+                <div class="col-6 simi-left" *ngFor="let product of product | slice: 0: 1">
+                  <div class="itm">
+                    <a routerLink="/product-detail/{{pid}}">
+                      <img src="{{product.thumb}}">
+                    </a>
+                    <div class="item-inf text-center">
+                      <p class="mdt my-2">{{product.name}}</p>
+                      <p class="">{{product.price | currency: 'USD'}}</p>
+                    </div>
+                  </div>
+                  <div class="jewel">
+                    <p class="mdt mb-1">Jewellery</p>
+                    <p class="smt my-2">{{product.jewellery_type}}</p>
+                    <p class="smt my-2">4mm width</p>
+                    <p class="smt mb-0">Carat total weight .48</p>
+                  </div>
+                  <div class="line my-2"></div>
+                  <div class="mater">
+                    <p class="mdt mb-1">Material</p>
+                    <p class="smt">{{product.material}}</p>
+                  </div>
+                  <button type="button" class="btn btn-pri btnsm w-100" data-bs-dismiss="modal">Add to bag</button>
+                </div>
+                <div class="col-6 simi-right">
+                  <div class="itm">
+                    <a routerLink="/product-detail/{{item.pid}}">
+                      <img src="{{item.thumb}}">
+                    </a>
+                    <div class="item-inf text-center">
+                      <p class="mdt my-2">{{item.name}}</p>
+                      <p class="">{{item.price | currency: 'USD'}}</p>
+                    </div>
+                  </div>
+                  <div class="jewel">
+                    <p class="mdt mb-1">Jewellery</p>
+                    <p class="smt my-2">{{item.jewellery_type}}</p>
+                    <p class="smt my-2">2.5mm width x2</p>
+                    <p class="smt mb-0">Carat total weight .50</p>
+                  </div>
+                  <div class="line my-2"></div>
+                  <div class="mater">
+                    <p class="mdt mb-1">Material</p>
+                    <p class="smt">{{item.material}}</p>
+                  </div>
+                  <button type="button" class="btn btn-pri btnsm w-100" data-bs-dismiss="modal">Add to bag</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
 
-  <!-- Modal Compare-->
-  <div class="modal fade" id="compare">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <h5 class="modal-title" id="exampleModalLabel">Compare Products</h5>
-        <div class="row">
-          <div class="col-6 simi-left" *ngFor="let item of product | slice: 0: 1">
-            <div class="itm">
-              <a routerLink="/product-detail/{{pid}}">
-                <img src="{{item.thumb}}">
-              </a>
-              <div class="item-inf text-center">
-                <p class="mdt my-2">{{item.name}}</p>
-                <p class="">{{item.price | currency: 'USD'}}</p>
-              </div>
-            </div>
-            <div class="jewel">
-              <p class="mdt mb-1">Jewellery</p>
-              <p class="smt my-2">{{item.jewellery_type}}</p>
-              <p class="smt my-2">4mm width</p>
-              <p class="smt mb-0">Carat total weight .48</p>
-            </div>
-            <div class="line my-2"></div>
-            <div class="mater">
-              <p class="mdt mb-1">Material</p>
-              <p class="smt">16k {{item.material}}</p>
-            </div>
-            <button type="button" class="btn btn-pri btnsm w-100" data-bs-dismiss="modal">Add to bag</button>
-          </div>
-          <div class="col-6 simi-right" *ngFor="let item of similar | slice: 2:3">
-            <div class="itm">
-              <a routerLink="/product-detail/{{item.pid}}">
-                <img src="{{item.thumb}}">
-              </a>
-              <div class="item-inf text-center">
-                <p class="mdt my-2">{{item.name}}</p>
-                <p class="">{{item.price | currency: 'USD'}}</p>
-              </div>
-            </div>
-            <div class="jewel">
-              <p class="mdt mb-1">Jewellery</p>
-              <p class="smt my-2">{{item.jewellery_type}}</p>
-              <p class="smt my-2">2.5mm width x2</p>
-              <p class="smt mb-0">Carat total weight .50</p>
-            </div>
-            <div class="line my-2"></div>
-            <div class="mater">
-              <p class="mdt mb-1">Material</p>
-              <p class="smt">18k {{item.material}}</p>
-            </div>
-            <button type="button" class="btn btn-pri btnsm w-100" data-bs-dismiss="modal">Add to bag</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 </div>
 
 <!--More from this collection-->
 <div class="also-like">
-  <h5 class="text-center">Discover More From This Collection</h5>
+  <h5 class="text-center" *ngFor="let item of collection | slice: 0:1">
+    Discover More From {{item.collection}} Collection
+  </h5>
   <div id="carouselalsolike" class="carousel slide carousel-dark carousel-also mb-5" data-bs-ride="carousel">
     <div class="carousel-inner container">
       <div class="carousel-item active" data-bs-interval="6000">
         <div class="row">
-          <div class="col-3" *ngFor="let item of similar | slice: 0: 4">
+          <div class="col-3" *ngFor="let item of collection | slice: 0: 4">
             <div class="item-card-info">
               <div class="card-prd">
                 <div class="img">
@@ -342,7 +346,7 @@
       </div>
       <div class="carousel-item" data-bs-interval="5000">
         <div class="row">
-          <div class="col-3" *ngFor="let item of similar | slice: 4: 8">
+          <div class="col-3" *ngFor="let item of collection | slice: 4: 8">
             <div class="item-card-info">
               <div class="card-prd">
                 <div class="img">
@@ -364,7 +368,7 @@
       </div>
       <div class="carousel-item" data-bs-interval="5000">
         <div class="row">
-          <div class="col-3" *ngFor="let item of similar | slice: 8: 12">
+          <div class="col-3" *ngFor="let item of collection | slice: 8: 12">
             <div class="item-card-info">
               <div class="card-prd">
                 <div class="img">
@@ -484,7 +488,7 @@
 <!--REVIEW-->
 <div class="review container">
   <div class="d-flex review-start py-5">
-    <h3>4,9</h3>
+    <h3>5.0</h3>
     <div class="d-flex my-auto">
       <i class="fa-solid fa-star fa-xl"></i>
       <i class="fa-solid fa-star fa-xl"></i>
@@ -530,21 +534,6 @@
     </div>
   </div>
   <div class="line my-3"></div>
-  <div class="row select-review">
-    <div class="col-3">
-      <h6>16 Reviews</h6>
-    </div>
-    <div class="col-6"></div>
-    <div class="col-3">
-      <select class="form-select smt w-100">
-        <option selected>Sort by: Newest</option>
-        <option value="1">Highest Rating</option>
-        <option value="2">Lowest Rating</option>
-        <option value="3">Most Votes</option>
-        <option value="3">Least Votes</option>
-      </select>
-    </div>
-  </div>
   <div class="review-box">
     <div *ngFor="let item of review">
       <div class="d-flex review-inner">
@@ -554,7 +543,7 @@
         <div class="review-content w-100 ms-3">
           <div class="d-flex">
             <p class="me-auto mb10 user-name mdt">{{item.cus_name}}</p>
-            <span class="smt">{{item.review_date}}</span>
+            <span class="smt">{{item.review_date | date:'medium'}}</span>
           </div>
           <div>
             <div class="d-flex rate-start">
@@ -570,129 +559,11 @@
             <div class="like-review">
               <i class="align-middle fa-regular fa-heart fa-lg"></i>
               <span class="smt pr-3"> {{item.cusid}}</span>
-              <i class="far fa-comment-dots fa-lg" data-bs-toggle="modal" role="button" data-bs-target="#review"></i>
-              <span class="smt pr-3"> 0</span>
             </div>
           </div>
         </div>
       </div>
+      <div class="line mb-3"></div>
     </div>
-
-
-<!--    <div class="d-flex review-inner">-->
-<!--      <div class="review-ava">-->
-<!--        <img src="./assets/img/product-detail/user1.png">-->
-<!--      </div>-->
-<!--      <div class="review-content w-100 ms-3">-->
-<!--        <div class="d-flex">-->
-<!--          <p class="me-auto mb10 user-name mdt">HueVT99</p>-->
-<!--          <span class="smt">2022/12/02</span>-->
-<!--        </div>-->
-<!--        <div>-->
-<!--          <div class="d-flex rate-start">-->
-<!--            <i class="fa-solid fa-star fa"></i>-->
-<!--            <i class="fa-solid fa-star"></i>-->
-<!--            <i class="fa-solid fa-star"></i>-->
-<!--            <i class="fa-solid fa-star"></i>-->
-<!--            <i class="fa-solid fa-star"></i>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--        <div class="d-flex">-->
-<!--          <p class="user-cmt smt me-auto">Baking time will vary if you change the pan size. Every oven is different so I can’t-->
-<!--            say for certain what you’ll need to adjust it to.</p>-->
-<!--          <div class="like-review">-->
-<!--            <i class="align-middle fa-regular fa-heart fa-lg"></i>-->
-<!--            <span class="smt ms-2">19</span>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--    <div class="line mb-3"></div>-->
-<!--    <div class="d-flex review-inner">-->
-<!--      <div class="review-ava">-->
-<!--        <img src="./assets/img/product-detail/user1.png">-->
-<!--      </div>-->
-<!--      <div class="review-content w-100 ms-3">-->
-<!--        <div class="d-flex">-->
-<!--          <p class="me-auto mb10 user-name mdt">HueVT99</p>-->
-<!--          <span class="smt">2022/12/02</span>-->
-<!--        </div>-->
-<!--        <div>-->
-<!--          <div class="d-flex rate-start">-->
-<!--            <i class="fa-solid fa-star fa"></i>-->
-<!--            <i class="fa-solid fa-star"></i>-->
-<!--            <i class="fa-solid fa-star"></i>-->
-<!--            <i class="fa-solid fa-star"></i>-->
-<!--            <i class="fa-solid fa-star"></i>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--        <div class="d-flex">-->
-<!--          <p class="user-cmt smt me-auto">Baking time will vary if you change the pan size. Every oven is different so I can’t-->
-<!--            say for certain what you’ll need to adjust it to.</p>-->
-<!--          <div class="like-review">-->
-<!--            <i class="align-middle fa-regular fa-heart fa-lg"></i>-->
-<!--            <span class="smt ms-2">19</span>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--    <div class="line mb-3"></div>-->
-<!--    <div class="d-flex review-inner">-->
-<!--      <div class="review-ava">-->
-<!--        <img src="./assets/img/product-detail/user1.png">-->
-<!--      </div>-->
-<!--      <div class="review-content w-100 ms-3">-->
-<!--        <div class="d-flex">-->
-<!--          <p class="me-auto mb10 user-name mdt">HueVT99</p>-->
-<!--          <span class="smt">2022/12/02</span>-->
-<!--        </div>-->
-<!--        <div>-->
-<!--          <div class="d-flex rate-start">-->
-<!--            <i class="fa-solid fa-star fa"></i>-->
-<!--            <i class="fa-solid fa-star"></i>-->
-<!--            <i class="fa-solid fa-star"></i>-->
-<!--            <i class="fa-solid fa-star"></i>-->
-<!--            <i class="fa-solid fa-star"></i>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--        <div class="d-flex">-->
-<!--          <p class="user-cmt smt me-auto">Baking time will vary if you change the pan size. Every oven is different so I can’t-->
-<!--            say for certain what you’ll need to adjust it to.</p>-->
-<!--          <div class="like-review">-->
-<!--            <i class="align-middle fa-regular fa-heart fa-lg"></i>-->
-<!--            <span class="smt ms-2">19</span>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--    <div class="line mb-3"></div>-->
-<!--    <div class="d-flex review-inner">-->
-<!--      <div class="review-ava">-->
-<!--        <img src="./assets/img/product-detail/user1.png">-->
-<!--      </div>-->
-<!--      <div class="review-content w-100 ms-3">-->
-<!--        <div class="d-flex">-->
-<!--          <p class="me-auto mb10 user-name mdt">HueVT99</p>-->
-<!--          <span class="smt">2022/12/02</span>-->
-<!--        </div>-->
-<!--        <div>-->
-<!--          <div class="d-flex rate-start">-->
-<!--            <i class="fa-solid fa-star fa"></i>-->
-<!--            <i class="fa-solid fa-star"></i>-->
-<!--            <i class="fa-solid fa-star"></i>-->
-<!--            <i class="fa-solid fa-star"></i>-->
-<!--            <i class="fa-solid fa-star"></i>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--        <div class="d-flex">-->
-<!--          <p class="user-cmt smt me-auto">Baking time will vary if you change the pan size. Every oven is different so I can’t-->
-<!--            say for certain what you’ll need to adjust it to.</p>-->
-<!--          <div class="like-review">-->
-<!--            <i class="align-middle fa-regular fa-heart fa-lg"></i>-->
-<!--            <span class="smt ms-2">19</span>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
   </div>
 </div>
