--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -9,7 +9,7 @@
           <img src="{{item.url}}">
         </div>
       </div>
-      <div class="col-6" *ngFor="let item of product | slice: 0: 1">
+      <div class="col-6" *ngFor="let item of product | slice:0:1">
         <img src="{{item.url}}">
       </div>
       <div class="col-4" *ngFor="let item of product | slice: 0: 1">
