--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -72,7 +72,7 @@
             <!--search-button-start-->
             <div class="search-box">
                 <input class="search-inp" type="text" placeholder="search...">
-                <a routerLink="#" class="iconsearch">
+                <a routerLink="/search" class="iconsearch">
                   <i class="fa fa-search fa-lg"></i>
                 </a>
             </div>
