--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -153,8 +153,195 @@
     </div>
 </div>
 
+<!--New Arrivals-->
+<div class="simi-prod new-arrivals mbt-120">
+  <div class="container">
+    <div class="row">
+      <div class="col-3">
+        <h5 class="mt-5">New Arrivals</h5>
+        <p class="smt mt-2">AGURI designs reinvent our iconic AGURI collection with bold profiles and powerful details.</p>
+      </div>
+      <div class="col-9 pe-0">
+        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="3000">
+              <div class="row">
+                <div class="col-4" *ngFor="let item of newArrival | slice: 0:3">
+                  <div class="card-prd">
+                    <div class="img">
+                      <a routerLink="/product-detail/{{item.pid}}">
+                        <img src="{{item.thumb}}">
+                      </a>
+                    </div>
+                    <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                      Quick view
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="3000">
+              <div class="row">
+                <div class="col-4" *ngFor="let item of newArrival | slice: 3:6">
+                  <div class="card-prd">
+                    <div class="img">
+                      <a routerLink="/product-detail/{{item.pid}}">
+                        <img src="{{item.thumb}}">
+                      </a>
+                    </div>
+                    <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                      Quick view
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!--Modal Quick view-->
+<div class="container">
+  <div class="modal fade" id="quickview">
+    <div class="modal-dialog modal-dialog-centered quickview">
+      <div class="modal-content">
+        <div class="row">
+          <div class="col-7 ps-0">
+            <!--Carousel quick view product-->
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+              </div>
+              <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="5000">
+                  <img src="./assets/img/product-detail/quickview1.png">
+                </div>
+                <div class="carousel-item" data-bs-interval="3000">
+                  <img src="./assets/img/product-detail/quickview2.png">
+                </div>
+                <div class="carousel-item" data-bs-interval="3000">
+                  <img src="./assets/img/product-detail/quickview3.png">
+                </div>
+                <div class="carousel-item">
+                  <img src="./assets/img/product-detail/quickview4.png">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-5 pe-0">
+            <h5>Diamond Wire Ring</h5>
+            <h5 class="my-3">$7,000</h5>
+            <div class="d-flex">
+              <p class="mdt me-auto">Quantity</p>
+              <span class="buttons_added ml-1">
+                 <input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="">
+               </span>
+            </div>
+            <div class="line"></div>
+            <div class="quick-size my-3">
+              <select class="form-select smt">
+                <option selected>Select size</option>
+                <option value="1">3</option>
+                <option value="2">3 1/2</option>
+                <option value="3">4</option>
+                <option value="3">4 1/2</option>
+                <option value="3">5</option>
+                <option value="3">5 1/2</option>
+              </select>
+            </div>
+            <button type="button" class="btn btn-pri mb-3" data-bs-dismiss="modal">Add to bag</button>
+            <a href="">
+              <p>View more detail</p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--All-jewellery-->
+<div class="container">
+  <div class="all-jewelery mbt-120">
+    <div class="row mbt">
+      <div class="col-4 all-top">
+        <div class="top-content">
+          <h4 class="mb-1">Aguri's Jewellery</h4>
+          <p class="smt mb-3">Shop our carefully considered selection of rings, necklaces, earrings and bracelets</p>
+        </div>
+        <div class="item-box-all">
+          <div class="item-box-img">
+            <a routerLink="/category/4">
+              <img src="./assets/img/home/all-j1.png"/>
+            </a>
+          </div>
+          <div class="item-box-content text-center">
+            <a routerLink="/category/4">
+              <h5>Necklaces</h5>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="col-8">
+        <div class="item-box-all">
+          <div class="item-box-img">
+            <a routerLink="/category/3">
+              <img src="./assets/img/home/all-j2.png"/>
+            </a>
+          </div>
+          <div class="item-box-content text-center">
+            <a routerLink="/category/3">
+              <h5>Bracelets</h5>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row all-bottom">
+      <div class="col-4 bottom-content">
+        <div class="bottom-content-inner">
+          <p class="text-right decor-text mb-0">Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into classic silhouettes. For individuals of all genders that.</p>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="item-box-all">
+          <div class="item-box-img">
+            <a routerLink="/category/1">
+              <img src="./assets/img/home/all-j3.png"/>
+            </a>
+          </div>
+          <div class="item-box-content text-center">
+            <a routerLink="/category/1">
+              <h5>Rings</h5>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="item-box-all">
+          <div class="item-box-img">
+            <a routerLink="/category/2">
+              <img src="./assets/img/home/all-j4.png"/>
+            </a>
+          </div>
+          <div class="item-box-content text-center">
+            <a routerLink="/category/2">
+              <h5>Earrings</h5>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <!--Our Best Seller-->
-<div class="also-like best-seller mbt-120">
+<div class="also-like best-seller">
   <h5 class="text-center mb-4">Our Best Sellers</h5>
   <div id="bestseller" class="carousel slide carousel-dark" data-bs-ride="carousel">
     <div class="carousel-inner container">
@@ -296,80 +483,7 @@
   </div>
 </div>
 
-<!--All-jewellery-->
-<div class="container">
-  <div class="all-jewelery mbt-120">
-    <div class="row mbt">
-      <div class="col-4 all-top">
-        <div class="top-content">
-          <h4 class="mb-1">Aguri's Jewellery</h4>
-          <p class="smt mb-3">Shop our carefully considered selection of rings, necklaces, earrings and bracelets</p>
-        </div>
-        <div class="item-box-all">
-          <div class="item-box-img">
-            <a routerLink="/category/4">
-              <img src="./assets/img/home/all-j1.png"/>
-            </a>
-          </div>
-          <div class="item-box-content text-center">
-            <a routerLink="/category/4">
-              <h5>Necklaces</h5>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="col-8">
-        <div class="item-box-all">
-          <div class="item-box-img">
-            <a routerLink="/category/3">
-              <img src="./assets/img/home/all-j2.png"/>
-            </a>
-          </div>
-          <div class="item-box-content text-center">
-            <a routerLink="/category/3">
-              <h5>Bracelets</h5>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="row all-bottom">
-      <div class="col-4 bottom-content">
-        <div class="bottom-content-inner">
-          <p class="text-right decor-text mb-0">Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into classic silhouettes. For individuals of all genders that.</p>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="item-box-all">
-          <div class="item-box-img">
-            <a routerLink="/category/1">
-              <img src="./assets/img/home/all-j3.png"/>
-            </a>
-          </div>
-          <div class="item-box-content text-center">
-            <a routerLink="/category/1">
-              <h5>Rings</h5>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="item-box-all">
-          <div class="item-box-img">
-            <a routerLink="/category/2">
-              <img src="./assets/img/home/all-j4.png"/>
-            </a>
-          </div>
-          <div class="item-box-content text-center">
-            <a routerLink="/category/2">
-              <h5>Earrings</h5>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+
 <!--All about us-->
 <div class="about row mbt-120">
   <div class="col-2"></div>
@@ -383,6 +497,7 @@
   </div>
   <div class="col-2"></div>
 </div>
+
 
 <!--New collection-->
 <div class="aguri-collection">
