--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -1,6 +1,6 @@
 <div class="container mb-5">
   <div class="search-title">
-    <h5 id="search-result" class="text-center">Your search for..... revealed the following:</h5>
+    <h5 id="search-result" class="text-center">Your search for  revealed the following:</h5>
   </div>
   <div class="row">
     <div class="col-2"></div>
