--- a/src/app/pages/shop-all/shop-all.component.html
+++ b/src/app/pages/shop-all/shop-all.component.html
@@ -125,7 +125,7 @@
         <div class="box-all mbt">
           <div class="click-to-all">
             <a routerLink="/category/1">
-              <p class="mdt mb-0 text-center">Shop all</p>
+              <p class="mdt mb-0 text-center">Show more</p>
             </a>
           </div>
         </div>
@@ -201,7 +201,7 @@
         <div class="box-all mbt">
           <div class="click-to-all">
             <a routerLink="/category/2">
-              <p class="mdt mb-0 text-center">Shop all</p>
+              <p class="mdt mb-0 text-center">Show more</p>
             </a>
           </div>
         </div>
@@ -277,7 +277,7 @@
         <div class="box-all mbt">
           <div class="click-to-all">
             <a routerLink="/category/3">
-              <p class="mdt mb-0 text-center">Shop all</p>
+              <p class="mdt mb-0 text-center">Show more</p>
             </a>
           </div>
         </div>
@@ -353,7 +353,7 @@
           <div class="box-all mbt">
             <div class="click-to-all">
               <a routerLink="/category/4">
-                <p class="mdt mb-0 text-center">Shop all</p>
+                <p class="mdt mb-0 text-center">Show more</p>
               </a>
             </div>
           </div>
