--- a/src/app/pages/category/category.component.html
+++ b/src/app/pages/category/category.component.html
@@ -110,17 +110,17 @@
                             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
                           </div>
                           <div class="carousel-inner">
-                            <div class="carousel-item active">
-                              <img src="{{item.url}}">
+                            <div class="carousel-item active" data-bs-interval="5000">
+                              <img src="./assets/img/product-detail/quickview1.png">
+                            </div>
+                            <div class="carousel-item" data-bs-interval="3000">
+                              <img src="./assets/img/product-detail/quickview2.png">
+                            </div>
+                            <div class="carousel-item" data-bs-interval="3000">
+                              <img src="./assets/img/product-detail/quickview3.png">
                             </div>
                             <div class="carousel-item">
-                              <img src="{{item.url}}">
-                            </div>
-                            <div class="carousel-item">
-                              <img src="{{item.url}}">
-                            </div>
-                            <div class="carousel-item">
-                              <img src="{{item.url}}">
+                              <img src="./assets/img/product-detail/quickview4.png">
                             </div>
                           </div>
                         </div>
@@ -140,7 +140,7 @@
                             <option value="3">5 1/2</option>
                           </select>
                         </div>
-                        <button type="button" class="btn btn-pri mb-3 w-100" data-bs-dismiss="modal">Add to bag</button>
+                        <button type="button" class="btn btn-pri mb-3 w-100">Add to bag</button>
                         <a href="">
                           <p>View more detail</p>
                         </a>
