--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -32,7 +32,7 @@
         <!--quantity-->
         <div class=d-flex>
           <p class="mdt me-auto">Quantity</p>
-          <span class="buttons_added ml-1">
+          <span class="buttons_added ml-1 qty-box">
             <input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="">
           </span>
         </div>
