--- a/src/app/pages/product-detail/product-detail.component.css
+++ b/src/app/pages/product-detail/product-detail.component.css
@@ -14,6 +14,13 @@
 .breadcrumb .breadcrumb-item a{
   font-size:14px;
 }
+/*QTY BOX*/
+.qty-box {
+  border: 1px solid #999;
+  border-radius: 5px;
+  background-color: #fff;
+  height: 30px;
+}
 /*FIND SIZE*/
 .mx12{
   padding-left:25px;
