--- a/src/app/pages/thank-you/thank-you.component.html
+++ b/src/app/pages/thank-you/thank-you.component.html
@@ -11,7 +11,7 @@
     <div class="col-3"></div>
     <div class="row col-6">
       <div class="col-6">
-        <button class="btn btnlg btn-sec w-100">View detail order</button>
+        <button class="btn btnlg btn-sec w-100">Track your order</button>
       </div>
       <div class="col-6">
         <button routerLink="/shop-all" class="btn btnlg btn-pri w-100">Continue shopping</button>
@@ -79,14 +79,14 @@
             <p>$0</p>
           </div>
         </div>
-        <div class="row ship-fee">
-          <div class="col-10 ps-0">
-            <p>Discount (coupon)</p>
-          </div>
-          <div class="col-2 pe-0">
-            <p>-$7,00</p>
-          </div>
-        </div>
+<!--        <div class="row ship-fee">-->
+<!--          <div class="col-10 ps-0">-->
+<!--            <p>Discount (coupon)</p>-->
+<!--          </div>-->
+<!--          <div class="col-2 pe-0">-->
+<!--            <p>-$7,00</p>-->
+<!--          </div>-->
+<!--        </div>-->
         <div class="line mb-3"></div>
         <div class="total-itm row">
           <div class="col-10 ps-0">
