--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -83,11 +83,14 @@
         <h6>$11,700</h6>
       </div>
       <p class="smt">Receive it in Vietnam in 4 - 6 business day/s with Express Shipping.</p>
-      <div class="my-3">
-        <input type="checkbox" class="check-box check-cate" id="collection-1" name="collection-1" value="Sping Collection">
-        <label class="smt" for="collection-1">I accept the terms and conditions, privacy policy.</label><br>
-      </div>
-      <button class="btn btn-pri btnlg w-100" type="button" routerLink="/check-out">Check out</button>
+      <form>
+        <div class="my-3">
+          <input type="checkbox" class="check-box check-cate" id="collection-1" name="collection-1" value="Sping Collection" required>
+          <label class="smt" for="collection-1">I accept the terms and conditions, privacy policy.</label><br>
+        </div>
+        <button class="btn btn-pri btnlg w-100" type="submit" routerLink="/check-out">Check out</button>
+      </form>
+
       <p class="mt-3 smt">Do you have a coupon? Add it at checkout.</p>
     </div>
   </div>
