--- a/src/app/pages/product-detail/product-detail.component.css
+++ b/src/app/pages/product-detail/product-detail.component.css
@@ -16,7 +16,7 @@
 }
 /*QTY BOX*/
 .qty-box {
-  border: 1px solid #999;
+  border: 1px solid #ccc;
   border-radius: 5px;
   background-color: #fff;
   height: 30px;
