--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -254,7 +254,7 @@
                 <option value="3">5 1/2</option>
               </select>
             </div>
-            <button type="button" class="btn btn-pri mb-3" data-bs-dismiss="modal">Add to bag</button>
+            <button type="button" class="btn btn-pri mb-3 w-100" data-bs-dismiss="modal">Add to bag</button>
             <a href="">
               <p>View more detail</p>
             </a>
@@ -264,6 +264,9 @@
     </div>
   </div>
 </div>
+
+
+
 
 <!--All-jewellery-->
 <div class="container">
@@ -423,18 +426,18 @@
   </div>
 </div>
 <!--Modal Quick view-->
-<div class="modal fade" id="quickview">
+<div class="modal fade" id="quickview2">
   <div class="modal-dialog modal-dialog-centered quickview">
     <div class="modal-content">
       <div class="row">
         <div class="col-7 ps-0">
           <!--Carousel quick view product-->
-          <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+          <div id="carouselExampleIndicators2" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="3" aria-label="Slide 4"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="5000">
