--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -1,13 +1,22 @@
 <div class="container mb-5">
   <div class="search-title">
-    <h5 id="search-result" class="text-center">Your search for  revealed the following:</h5>
+    <h5 id="search-result" class="text-center">Your search revealed the following:</h5>
   </div>
   <div class="row">
     <div class="col-2"></div>
     <div class="col-8">
       <div class="product-result row">
         <div class="product-img col-4 ps-0">
-          <img src="./assets/img/product-detail/quickview1.png">
+          <div class="card-prd">
+            <div class="img">
+              <a routerLink="/product-detail/3">
+                <img src="./assets/img/product-detail/quickview1.png">
+              </a>
+            </div>
+            <div class="compare card-prd-bt smt">
+              <a routerLink="/product-detail/3">View detail</a>
+            </div>
+          </div>
         </div>
         <div class="product-info col-8 pe-0">
           <h6 class="mb-2">NOMA EARRING</h6>
@@ -20,7 +29,16 @@
       <div class="line my-4"></div>
       <div class="product-result row">
         <div class="product-img col-4 ps-0">
-          <img src="./assets/img/product-detail/quickview1.png">
+          <div class="card-prd">
+            <div class="img">
+              <a routerLink="/product-detail/3">
+                <img src="./assets/img/product-detail/quickview2.png">
+              </a>
+            </div>
+            <div class="compare card-prd-bt smt">
+              <a routerLink="/product-detail/3">View detail</a>
+            </div>
+          </div>
         </div>
         <div class="product-info col-8 pe-0">
           <h6 class="mb-2">NOMA EARRING</h6>
@@ -33,7 +51,16 @@
       <div class="line my-4"></div>
       <div class="product-result row">
         <div class="product-img col-4 ps-0">
-          <img src="./assets/img/product-detail/quickview1.png">
+          <div class="card-prd">
+            <div class="img">
+              <a routerLink="/product-detail.3">
+                <img src="./assets/img/product-detail/quickview3.png">
+              </a>
+            </div>
+            <div class="compare card-prd-bt smt">
+              <a routerLink="/product-detail/3">View detail</a>
+            </div>
+          </div>
         </div>
         <div class="product-info col-8 pe-0">
           <h6 class="mb-2">NOMA EARRING</h6>
@@ -46,7 +73,16 @@
       <div class="line my-4"></div>
       <div class="product-result row">
         <div class="product-img col-4 ps-0">
-          <img src="./assets/img/product-detail/quickview1.png">
+          <div class="card-prd">
+            <div class="img">
+              <a routerLink="/product-detail.3">
+                <img src="./assets/img/product-detail/quickview1.png">
+              </a>
+            </div>
+            <div class="compare card-prd-bt smt">
+              <a routerLink="/product-detail/3">View detail</a>
+            </div>
+          </div>
         </div>
         <div class="product-info col-8 pe-0">
           <h6 class="mb-2">NOMA EARRING</h6>
@@ -59,7 +95,16 @@
       <div class="line my-4"></div>
       <div class="product-result row">
         <div class="product-img col-4 ps-0">
-          <img src="./assets/img/product-detail/quickview1.png">
+          <div class="card-prd">
+            <div class="img">
+              <a routerLink="/product-detail/3">
+                <img src="./assets/img/product-detail/quickview1.png">
+              </a>
+            </div>
+            <div class="compare card-prd-bt smt">
+              <a routerLink="/product-detail/3">View detail</a>
+            </div>
+          </div>
         </div>
         <div class="product-info col-8 pe-0">
           <h6 class="mb-2">NOMA EARRING</h6>
