--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -201,8 +201,9 @@
               <div class="d-flex">
                 <a class="me-auto" href="#">
                   <p class="mdt">Call</p>
+                  For general inquiries please call: 800 843 3269
                 </a>
-                <i class="fa-solid fa-chevron-right"></i>
+                <i class="fa-solid fa-chevron-down"></i>
               </div>
               <div class="line mb-3"></div>
               <div class="d-flex">
