--- a/src/app/pages/sub-category/sub-category.component.html
+++ b/src/app/pages/sub-category/sub-category.component.html
@@ -1,42 +1,34 @@
 <!--category-top-->
 <div class="category-top row pb-5">
   <div class="col-12">
-    <div id="carouselTopBars" class="carousel slide" data-bs-ride="true">
+    <div id="carouselTopBars" class="carousel slide" data-bs-ride="carous">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselTopBars" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselTopBars" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#carouselTopBars" data-bs-slide-to="2" aria-label="Slide 3"></button>
       </div>
       <div class="carousel-inner">
-        <div class="carousel-item active" data-bs-interval="3000">
+        <div class="carousel-item active" data-bs-interval="2000">
           <img src="./assets/img/subcate-deco/{{sid}}.1.png" class="d-block w-100">
         </div>
-        <div class="carousel-item" data-bs-interval="3000">
+        <div class="carousel-item" data-bs-interval="2000">
           <img src="./assets/img/subcate-deco/{{sid}}.2.png" class="d-block w-100">
         </div>
-        <div class="carousel-item" data-bs-interval="3000">
+        <div class="carousel-item" data-bs-interval="2000">
           <img src="./assets/img/subcate-deco/{{sid}}.3.png" class="d-block w-100">
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
     </div>
   </div>
 
   <div class="category-top-text row">
     <div class="col-1"></div>
-    <div class="col-6" *ngFor="let item of subCate | slice: 0: 1">
-      <h4>{{item.sub_name}} {{item.cate_name}}</h4>
-      <p>Meticulously crafted with Aguri’s renowned jewellery, these are {{item.cate_name}} to wear—and love—for
+    <div class="col-4" *ngFor="let item of subCate | slice: 0: 1">
+      <h4 class="mb-2">{{item.sub_name}} {{item.cate_name}}</h4>
+      <p class="smt">Meticulously crafted with Aguri’s renowned jewellery, these are {{item.cate_name}} to wear—and love—for
         {{item.sub_name}}. Wear one on its own or stacked with an Aguri's {{item.sub_name}}</p>
     </div>
-    <div class="col-5"></div>
+    <div class="col-7"></div>
   </div>
 </div>
 
