--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -62,75 +62,45 @@
               <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
-              <table class="ring-size">
-                <thead class="size-title pb-3">
-                <tr>
-                  <th>AGURI (US) size</th>
-                  <th class="mx12">Circumference (mm)</th>
-<!--                  <th class="select-trans">-->
-<!--                    <select class="form-select smt">-->
-<!--                      <option selected>UK</option>-->
-<!--                      <option value="1">Japan</option>-->
-<!--                      <option value="2">Italy</option>-->
-<!--                      <option value="3">Germany</option>-->
-<!--                    </select>-->
-<!--                  </th>-->
-                </tr>
-                </thead>
-                <tbody>
-                <tr class="ring-size text-center">
-                  <td>
-                    <button class="btn btn-sec btnsm w-100" type="button">3</button>
-                  </td>
-                  <td>14.1 / 44.2</td>
-                  <td>F</td>
-                </tr>
-                <tr class="ring-cir text-center mx12">
-                  <td>
-                    <button class="btn btn-sec btnsm w-100" type="button">3 1/2</button>
-                  </td>
-                  <td>14.5 / 45.5</td>
-                  <td>G 1/2</td>
-                </tr>
-                <tr class="trans-size text-center">
-                  <td>
-                    <button class="btn btn-sec btnsm w-100" type="button">4</button>
-                  </td>
-                  <td>14.9 / 46.8</td>
-                  <td>H 1/2</td>
-                </tr>
-                <tr class="text-center ">
-                  <td>
-                    <button class="btn btn-sec btnsm w-100" type="button">4 1/2</button>
-                  </td>
-                  <td>15.3 / 48.0</td>
-                  <td>I 1/2</td>
-                </tr>
-                <tr class="text-center ">
-                  <td>
-                    <button class="btn btn-sec btnsm w-100" type="button">5</button>
-                  </td>
-                  <td>15.7 / 49.3</td>
-                  <td>J 1/2</td>
-                </tr>
-                <tr class="text-center ">
-                  <td>
-                    <button class="btn btn-sec btnsm w-100" type="button">5 1/2</button>
-                  </td>
-                  <td>15.7 / 49.3</td>
-                  <td>J 1/2</td>
-                </tr>
-                </tbody>
-              </table>
-              <h6 class="text-center mt-4">How To Measure</h6>
-              <div class="row mt-3">
-                <div class="col-4 px-0"></div>
-                <div class="col-4 px-0">
-                  <img src="./assets/img/product-detail/measure.png">
+              <div class="ring-table row">
+                <div class="col-6">
+                  <p class="mdt text-center mb-3">AGURI (US) size</p>
+                  <p class="text-center">3</p>
+                  <p class="text-center">3 1/2</p>
+                  <p class="text-center">4</p>
+                  <p class="text-center">4 1/2</p>
+                  <p class="text-center">5</p>
+                  <p class="text-center">5 1/2</p>
                 </div>
-                <div class="col-4 px-0"></div>
+                <div class="col-6">
+                  <p class="mdt text-center mb-3">Circumference (mm)</p>
+                  <p class="text-center">F</p>
+                  <p class="text-center">G 1/2</p>
+                  <p class="text-center">H 1/2</p>
+                  <p class="text-center">I 1/2</p>
+                  <p class="text-center">J 1/2</p>
+                  <p class="text-center">K 1/2</p>
+                </div>
               </div>
-              <!--Collapse How To Measure-->
+
+              <h6 class="mt-4 mb-3 text-center">How To Measure</h6>
+              <div class="row">
+                <div class="col-4"></div>
+                <div class="col-4">
+                  <img src="./assets/img/product-detail/measure1.png">
+                </div>
+                <div class="col-4"></div>
+              </div>
+              <div class="mt-3">
+                <ol class="px-0">
+                  <li class="smt">1. Grab a tape measure, length of string or strip of paper.</li>
+                  <li class="smt my-2">2. Wrap it around the finger you’ll wear your ring on—if you’re creating a ring
+                    stack, consider where on your finger the ring will sit—and mark the place where it joins.</li>
+                  <li class="smt">3. Lay your string or paper strip on a flat surface and use a ruler to measure the
+                    length up to the mark. Use the chart above to match the measurement to the closest Tiffany
+                    ring size.</li>
+                </ol>
+              </div>
             </div>
           </div>
         </div>
