--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -289,7 +289,7 @@
 <!--More from this collection-->
 <div class="also-like">
   <h5 class="text-center" *ngFor="let item of collection | slice: 0:1">
-    Discover More From {{item.collection}} Collection
+    More From {{item.collection}} Collection
   </h5>
   <div id="carouselalsolike" class="carousel slide carousel-dark carousel-also mb-5" data-bs-ride="carousel">
     <div class="carousel-inner container">
@@ -534,7 +534,6 @@
           </div>
         </div>
       </div>
-      <div class="line mb-3"></div>
     </div>
   </div>
 </div>
