--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -124,7 +124,7 @@
                 </div>
                 <div class="col-2 pe-0">
                   <i class="fa-solid fa-xmark"></i>
-                  <p>$5,000</p>
+                  <p class="price-tag">$5,000</p>
                 </div>
               </div>
               <div class="line mb-3"></div>
