--- a/src/styles.css
+++ b/src/styles.css
@@ -444,6 +444,10 @@ body{
   transform: translateY(-136px);
   transition: 0.4s all;
 }
+.offcanvas-body .fa-xmark{
+  margin-bottom:95px;
+  padding-left:45px;
+}
 
 
 
