--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,3 @@
-
 <!--Showcase-->
 <div class="container aguri-showcase mbt-120">
     <div class="row">
@@ -173,7 +172,7 @@
                         <img src="{{item.thumb}}">
                       </a>
                     </div>
-                    <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                    <div (click)="quickview(item)" class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
                       Quick view
                     </div>
                   </div>
@@ -189,75 +188,29 @@
                         <img src="{{item.thumb}}">
                       </a>
                     </div>
-                    <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                    <div (click)="quickview(item)" class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
                       Quick view
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!--Modal Quick view-->
-<div class="container">
-  <div class="modal fade" id="quickview">
-    <div class="modal-dialog modal-dialog-centered quickview">
-      <div class="modal-content">
-        <div class="row">
-          <div class="col-7 ps-0">
-            <!--Carousel quick view product-->
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-              <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-              </div>
-              <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="5000">
-                  <img src="./assets/img/product-detail/quickview1.png">
-                </div>
-                <div class="carousel-item" data-bs-interval="3000">
-                  <img src="./assets/img/product-detail/quickview2.png">
-                </div>
-                <div class="carousel-item" data-bs-interval="3000">
-                  <img src="./assets/img/product-detail/quickview3.png">
-                </div>
-                <div class="carousel-item">
-                  <img src="./assets/img/product-detail/quickview4.png">
+            <div class="carousel-item" data-bs-interval="3000">
+              <div class="row">
+                <div class="col-4" *ngFor="let item of newArrival | slice: 6:9">
+                  <div class="card-prd">
+                    <div class="img">
+                      <a routerLink="/product-detail/{{item.pid}}">
+                        <img src="{{item.thumb}}">
+                      </a>
+                    </div>
+                    <div (click)="quickview(item)" class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                      Quick view
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-5 pe-0">
-            <h5>Diamond Wire Ring</h5>
-            <h5 class="my-3">$7,000</h5>
-            <div class="d-flex">
-              <p class="mdt me-auto">Quantity</p>
-              <span class="buttons_added ml-1">
-                 <input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="">
-               </span>
-            </div>
-            <div class="line"></div>
-            <div class="quick-size my-3">
-              <select class="form-select smt">
-                <option selected>Select size</option>
-                <option value="1">3</option>
-                <option value="2">3 1/2</option>
-                <option value="3">4</option>
-                <option value="3">4 1/2</option>
-                <option value="3">5</option>
-                <option value="3">5 1/2</option>
-              </select>
-            </div>
-            <button type="button" class="btn btn-pri mb-3" data-bs-dismiss="modal">Add to bag</button>
-            <a href="">
-              <p>View more detail</p>
-            </a>
           </div>
         </div>
       </div>
@@ -345,7 +298,7 @@
   <h5 class="text-center mb-4">Our Best Sellers</h5>
   <div id="bestseller" class="carousel slide carousel-dark" data-bs-ride="carousel">
     <div class="carousel-inner container">
-      <div class="carousel-item active" data-bs-interval="6000">
+      <div class="carousel-item active" data-bs-interval="3000">
         <div class="row">
           <div class="col-3" *ngFor="let item of bestSeller | slice: 0: 4">
             <div class="item-card-info">
@@ -355,7 +308,7 @@
                     <img src="{{item.thumb}}">
                   </a>
                 </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                <div (click)="quickview(item)" class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
                   Quick view
                 </div>
               </div>
@@ -367,7 +320,7 @@
           </div>
         </div>
       </div>
-      <div class="carousel-item" data-bs-interval="5000">
+      <div class="carousel-item" data-bs-interval="3000">
         <div class="row">
           <div class="col-3" *ngFor="let item of bestSeller | slice: 4: 8">
             <div class="item-card-info">
@@ -377,7 +330,7 @@
                     <img src="{{item.thumb}}">
                   </a>
                 </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                <div (click)="quickview(item)" class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
                   Quick view
                 </div>
               </div>
@@ -389,7 +342,7 @@
           </div>
         </div>
       </div>
-      <div class="carousel-item" data-bs-interval="5000">
+      <div class="carousel-item" data-bs-interval="3000">
         <div class="row">
           <div class="col-3" *ngFor="let item of bestSeller | slice: 8: 12">
             <div class="item-card-info">
@@ -399,7 +352,7 @@
                     <img src="{{item.thumb}}">
                   </a>
                 </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                <div (click)="quickview(item)" class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
                   Quick view
                 </div>
               </div>
@@ -422,67 +375,49 @@
     </button>
   </div>
 </div>
+
 <!--Modal Quick view-->
-<div class="modal fade" id="quickview">
-  <div class="modal-dialog modal-dialog-centered quickview">
-    <div class="modal-content">
-      <div class="row">
-        <div class="col-7 ps-0">
-          <!--Carousel quick view product-->
-          <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active" data-bs-interval="5000">
-                <img src="./assets/img/product-detail/quickview1.png">
-              </div>
-              <div class="carousel-item" data-bs-interval="3000">
-                <img src="./assets/img/product-detail/quickview2.png">
-              </div>
-              <div class="carousel-item" data-bs-interval="3000">
-                <img src="./assets/img/product-detail/quickview3.png">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/product-detail/quickview4.png">
-              </div>
-            </div>
+<div class="container">
+  <div class="modal fade" id="quickview">
+    <div class="modal-dialog modal-dialog-centered quickview">
+      <div class="modal-content" *ngIf="quickviewed">
+        <div class="row">
+          <div class="col-7 ps-0">
+            <img src="{{quickviewed.thumb}}">
           </div>
-        </div>
-        <div class="col-5 pe-0">
-          <h5>Diamond Wire Ring</h5>
-          <h5 class="my-3">$7,000</h5>
-          <div class="d-flex">
-            <p class="mdt me-auto">Quantity</p>
-            <span class="buttons_added ml-1">
-                <input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="">
-              </span>
+          <div class="col-5 pe-0">
+            <h5>{{quickviewed.name}}</h5>
+            <h5 class="my-3">{{quickviewed.price | currency:'USD'}}</h5>
+            <form onsubmit="alert('The product was successfully added to bag!!')">
+              <div class="d-flex">
+                <p class="mdt me-auto">Quantity</p>
+                <span class="buttons_added ml-1 qty-box">
+                 <input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="" required>
+               </span>
+              </div>
+              <div class="line"></div>
+              <div class="quick-size my-3">
+                <select class="form-select smt" required>
+                  <option value="">Select size</option>
+                  <option value="1">3</option>
+                  <option value="2">3 1/2</option>
+                  <option value="3">4</option>
+                  <option value="4">4 1/2</option>
+                  <option value="5">5</option>
+                  <option value="6">5 1/2</option>
+                </select>
+              </div>
+              <input type="submit" class="btn btn-pri my-3" value="Add to bag">
+            </form>
+            <p class="mt-2">View more detail <a routerLink="/product-detail/{{quickviewed.pid}}" data-bs-dismiss="modal">
+              <i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
+            </a></p>
           </div>
-          <div class="line"></div>
-          <div class="quick-size my-3">
-            <select class="form-select smt">
-              <option selected>Select size</option>
-              <option value="1">3</option>
-              <option value="2">3 1/2</option>
-              <option value="3">4</option>
-              <option value="3">4 1/2</option>
-              <option value="3">5</option>
-              <option value="3">5 1/2</option>
-            </select>
-          </div>
-          <button type="button" class="btn btn-pri mb-3 w-100" data-bs-dismiss="modal">Add to bag</button>
-          <a href="">
-            <p>View more detail</p>
-          </a>
         </div>
       </div>
     </div>
   </div>
 </div>
-
 
 <!--All about us-->
 <div class="about row mbt-120">
@@ -690,6 +625,7 @@
   </div>
 </div>
 
-<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-
-
+<!--Back to top-->
+<div class="to-top" (click)="scrollToTop()" [ngClass]="{ 'show-scrollTop': windowScrolled }">
+  <span>Back to top</span><i class="fa fa-arrow-circle-up fa-3x"></i>
+</div>
