--- a/src/app/pages/shop-all/shop-all.component.html
+++ b/src/app/pages/shop-all/shop-all.component.html
@@ -78,7 +78,7 @@
               <img src="{{item.thumb}}">
             </a>
           </div>
-          <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+          <div (click)="quickview(item)" class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
             Quick view
           </div>
         </div>
@@ -104,7 +104,7 @@
               <img src="{{item.thumb}}">
             </a>
           </div>
-          <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+          <div (click)="quickview(item)" class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
             Quick view
           </div>
         </div>
@@ -116,7 +116,7 @@
               <img src="{{item.thumb}}">
             </a>
           </div>
-          <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+          <div (click)="quickview(item)" class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
             Quick view
           </div>
         </div>
@@ -135,7 +135,7 @@
               <img src="{{item.thumb}}">
             </a>
           </div>
-          <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+          <div (click)="quickview(item)" class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
             Quick view
           </div>
         </div>
@@ -168,7 +168,7 @@
               <img src="{{item.thumb}}">
             </a>
           </div>
-          <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+          <div (click)="quickview(item)" class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
             Quick view
           </div>
         </div>
@@ -180,7 +180,7 @@
               <img src="{{item.thumb}}">
             </a>
           </div>
-          <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+          <div (click)="quickview(item)" class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
             Quick view
           </div>
         </div>
@@ -192,7 +192,7 @@
               <img src="{{item.thumb}}">
             </a>
           </div>
-          <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+          <div (click)="quickview(item)" class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
             Quick view
           </div>
         </div>
@@ -211,7 +211,7 @@
               <img src="{{item.thumb}}">
             </a>
           </div>
-          <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+          <div (click)="quickview(item)" class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
             Quick view
           </div>
         </div>
@@ -230,7 +230,7 @@
               <img src="{{item.thumb}}">
             </a>
           </div>
-          <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+          <div (click)="quickview(item)" class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
             Quick view
           </div>
         </div>
@@ -242,7 +242,7 @@
               <img src="{{item.thumb}}">
             </a>
           </div>
-          <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+          <div (click)="quickview(item)" class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
             Quick view
           </div>
         </div>
@@ -254,7 +254,7 @@
               <img src="{{item.thumb}}">
             </a>
           </div>
-          <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+          <div (click)="quickview(item)" class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
             Quick view
           </div>
         </div>
@@ -287,7 +287,7 @@
               <img src="{{item.thumb}}">
             </a>
           </div>
-          <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+          <div (click)="quickview(item)" class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
             Quick view
           </div>
         </div>
@@ -306,7 +306,7 @@
                 <img src="{{item.thumb}}">
               </a>
             </div>
-            <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+            <div (click)="quickview(item)" class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
               Quick view
             </div>
           </div>
@@ -318,7 +318,7 @@
                 <img src="{{item.thumb}}">
               </a>
             </div>
-            <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+            <div (click)="quickview(item)" class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
               Quick view
             </div>
           </div>
@@ -344,7 +344,7 @@
                 <img src="{{item.thumb}}">
               </a>
             </div>
-            <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+            <div (click)="quickview(item)" class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
               Quick view
             </div>
           </div>
@@ -363,7 +363,7 @@
                 <img src="{{item.thumb}}">
               </a>
             </div>
-            <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+            <div (click)="quickview(item)" class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
               Quick view
             </div>
           </div>
@@ -371,57 +371,51 @@
       </div>
     </div>
 </div>
+
 <!--Modal Quick view-->
-<div class="modal fade" id="quickview">
-  <div class="modal-dialog modal-dialog-centered quickview">
-    <div class="modal-content">
-      <div class="row">
-        <div class="col-7 ps-0">
-          <!--Carousel quick view product-->
-          <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active" data-bs-interval="5000">
-                <img src="./assets/img/product-detail/quickview1.png">
-              </div>
-              <div class="carousel-item" data-bs-interval="3000">
-                <img src="./assets/img/product-detail/quickview2.png">
-              </div>
-              <div class="carousel-item" data-bs-interval="3000">
-                <img src="./assets/img/product-detail/quickview3.png">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/product-detail/quickview4.png">
-              </div>
-            </div>
+<div class="container">
+  <div class="modal fade" id="quickview">
+    <div class="modal-dialog modal-dialog-centered quickview">
+      <div class="modal-content" *ngIf="quickviewed">
+        <div class="row">
+          <div class="col-7 ps-0">
+            <img src="{{quickviewed.thumb}}">
           </div>
-        </div>
-        <div class="col-5 pe-0">
-          <h5>Diamond Wire Ring</h5>
-          <h5 class="my-3">$7,000</h5>
-          <p>Quantity</p>
-          <div class="quick-size my-3">
-            <select class="form-select smt">
-              <option selected>Select size</option>
-              <option value="1">3</option>
-              <option value="2">3 1/2</option>
-              <option value="3">4</option>
-              <option value="3">4 1/2</option>
-              <option value="3">5</option>
-              <option value="3">5 1/2</option>
-            </select>
+          <div class="col-5 pe-0">
+            <h5>{{quickviewed.name}}</h5>
+            <h5 class="my-3">{{quickviewed.price | currency:'USD'}}</h5>
+            <form onsubmit="alert('The product was successfully added to bag!!')">
+              <div class="d-flex">
+                <p class="mdt me-auto">Quantity</p>
+                <span class="buttons_added ml-1 qty-box">
+                 <input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="" required>
+               </span>
+              </div>
+              <div class="line"></div>
+              <div class="quick-size my-3">
+                <select class="form-select smt" required>
+                  <option value="">Select size</option>
+                  <option value="1">3</option>
+                  <option value="2">3 1/2</option>
+                  <option value="3">4</option>
+                  <option value="4">4 1/2</option>
+                  <option value="5">5</option>
+                  <option value="6">5 1/2</option>
+                </select>
+              </div>
+              <input type="submit" class="btn btn-pri my-3" value="Add to bag">
+            </form>
+            <p class="mt-2">View more detail <a routerLink="/product-detail/{{quickviewed.pid}}" data-bs-dismiss="modal">
+              <i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
+            </a></p>
           </div>
-          <button type="button" class="btn btn-pri mb-3 w-100" data-bs-dismiss="modal">Add to bag</button>
-          <a href="">
-            <p>View more detail</p>
-          </a>
         </div>
       </div>
     </div>
   </div>
+</div>
+
+<!--Back to top-->
+<div class="to-top" (click)="scrollToTop()" [ngClass]="{ 'show-scrollTop': windowScrolled }">
+  <span>Back to top</span><i class="fa fa-arrow-circle-up fa-3x"></i>
 </div>
