--- a/src/app/pages/thank-you/thank-you.component.html
+++ b/src/app/pages/thank-you/thank-you.component.html
@@ -6,12 +6,13 @@
   </svg>
 </div>
   <h4 class="text-center mb-3">Thank you! Your Order Has Been Processed!</h4>
-  <p class="text-center mb-4">You will receive an order confirmation email with details of your order</p>
+  <p class="text-center mb-3">You will receive an order confirmation email with details of your order</p>
+  <p class="smt text-center mb-4">Order: #98089899</p>
   <div class="row thanks">
     <div class="col-3"></div>
     <div class="row col-6">
       <div class="col-6">
-        <button class="btn btnlg btn-sec w-100">Track your order</button>
+        <button class="btn btnlg btn-sec w-100" routerLink="/tracking-order">Track your order</button>
       </div>
       <div class="col-6">
         <button routerLink="/shop-all" class="btn btnlg btn-pri w-100">Continue shopping</button>
