--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -1,4 +1,5 @@
 <!--Product detail-->
+<link rel="stylesheet" href="product-detail.component.css">
 <div class="container">
   <!--DETAIL-->
   <div class="prod-detail">
@@ -123,7 +124,7 @@
                     <p>Amel Earring</p>
                   </div>
                   <div class="col-3 pe-0">
-                    <span>x</span><input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="1">
+                    <span class="fa-xmark">x</span><input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="1">
                     <p>$5,000.00</p>
                     <i class="fas fa-trash-alt"></i>
                   </div>
@@ -139,7 +140,7 @@
                     <p>Diamons And Gold Spark Ring</p>
                   </div>
                   <div class="col-3 pe-0">
-                    <span>x</span><input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="1">
+                    <span class="fa-xmark">x</span><input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="1">
                     <p>$6,700.00</p>
                     <i class="fas fa-trash-alt"></i>
                   </div>
@@ -205,12 +206,11 @@
             </div>
           </div>
         </div>
-
         <!--DESCRIPTIONS & DETAIL-->
         <div class="accordion accordion-flush" id="accordionFlushExample">
           <div class="accordion-item">
             <a class="accordion-header" id="flush-headingOne">
-              <p class="mdt accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="true" aria-controls="flush-collapseOne">
+              <p class="mdt accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne">
                 Descriptions & Details
               </p>
             </a>
@@ -324,7 +324,7 @@
                     <img src="{{item.thumb}}">
                   </a>
                 </div>
-                <div (click)="quickview(item)" class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
                   Quick view
                 </div>
               </div>
@@ -368,7 +368,7 @@
                     <img src="{{item.thumb}}">
                   </a>
                 </div>
-                <div (click)="quickview(item)" class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
                   Quick view
                 </div>
               </div>
@@ -393,48 +393,65 @@
 </div>
 
 <!--Modal Quick view-->
-<div class="container">
-  <div class="modal fade" id="quickview">
-    <div class="modal-dialog modal-dialog-centered quickview">
-      <div class="modal-content" *ngIf="quickviewed">
-        <div class="row">
-          <div class="col-7 ps-0">
-            <img src="{{quickviewed.thumb}}">
-          </div>
-          <div class="col-5 pe-0">
-            <h5>{{quickviewed.name}}</h5>
-            <h5 class="my-3">{{quickviewed.price | currency:'USD'}}</h5>
-            <form onsubmit="alert('The product was successfully added to bag!!')">
-              <div class="d-flex">
-                <p class="mdt me-auto">Quantity</p>
-                <span class="buttons_added ml-1 qty-box">
-                 <input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="" required>
-               </span>
+<div class="modal fade " id="quickview">
+  <div class="modal-dialog modal-dialog-centered quickview">
+    <div class="modal-content">
+      <div class="row">
+        <div class="col-7 ps-0">
+          <!--Carousel quick view product-->
+          <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="5000">
+                <img src="./assets/img/product-detail/quickview1.png">
               </div>
-              <div class="line"></div>
-              <div class="quick-size my-3">
-                <select class="form-select smt" required>
-                  <option value="">Select size</option>
-                  <option value="1">3</option>
-                  <option value="2">3 1/2</option>
-                  <option value="3">4</option>
-                  <option value="4">4 1/2</option>
-                  <option value="5">5</option>
-                  <option value="6">5 1/2</option>
-                </select>
+              <div class="carousel-item" data-bs-interval="3000">
+                <img src="./assets/img/product-detail/quickview2.png">
               </div>
-              <input type="submit" class="btn btn-pri my-3" value="Add to bag">
-            </form>
-            <p class="mt-2">View more detail <a routerLink="/product-detail/{{quickviewed.pid}}" data-bs-dismiss="modal">
-              <i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
-            </a></p>
+              <div class="carousel-item" data-bs-interval="3000">
+                <img src="./assets/img/product-detail/quickview3.png">
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/img/product-detail/quickview4.png">
+              </div>
+            </div>
           </div>
+        </div>
+        <div class="col-5 pe-0">
+          <h5>Diamond Wire Ring</h5>
+          <h5 class="my-3">$7,000</h5>
+          <div class="d-flex">
+            <p class="mdt me-auto">Quantity</p>
+            <span class="buttons_added ml-1">
+                <input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="">
+              </span>
+          </div>
+          <div class="line"></div>
+          <div class="quick-size my-3">
+            <select class="form-select smt">
+              <option selected>Select size</option>
+              <option value="1">3</option>
+              <option value="2">3 1/2</option>
+              <option value="3">4</option>
+              <option value="3">4 1/2</option>
+              <option value="3">5</option>
+              <option value="3">5 1/2</option>
+            </select>
+          </div>
+          <button type="button" class="btn btn-pri mb-3 w-100" data-bs-dismiss="modal" onclick="alert('The product was successfully added to bag!!')">Add to bag</button>
+          <a href="">
+            <p>View more detail</p>
+          </a>
         </div>
       </div>
     </div>
   </div>
 </div>
-
 <!--more abt collection-->
 <div class=" more-collection mbt-120">
   <div class="row more-collec-inner">
