--- a/src/app/pages/tracking-order/tracking-order.component.html
+++ b/src/app/pages/tracking-order/tracking-order.component.html
@@ -39,7 +39,7 @@
     </div>
     <div class="col-4 pe-0">
       <p class="decor-text text-right mb-2">Ready</p>
-      <p class="text-right smt">Waiting for carrier</p>
+      <p class="text-right smt mb-0">Waiting for carrier</p>
     </div>
   </div>
   <div class="line my-3"></div>
