--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,9 @@
         </div>
         <!--logo-->
         <div class="col-4 d-flex justify-content-center">
-          <img id="logo" src="./assets/img/logo.svg" alt="aguri-logo"/>
+          <a routerLink="/home">
+            <img id="logo" src="./assets/img/logo.svg" alt="aguri-logo"/>
+          </a>
         </div>
         <!--top-page-right-->
         <div class="col-4">
