--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -1,122 +1,38 @@
 <div class="container mb-5">
   <div class="search-title">
-    <h5 id="search-result" class="text-center">Your search revealed the following:</h5>
+    <h5 id="search-result" class="text-center">{{searchResult.length}} related results:</h5>
   </div>
+
   <div class="row">
-    <div class="col-2"></div>
-    <div class="col-8">
+    <div class="col-12" *ngFor="let searchResult of searchResult">
       <div class="product-result row">
-        <div class="product-img col-4 ps-0">
+        <div class="product-img col-2 ps-0">
           <div class="card-prd">
             <div class="img">
-              <a routerLink="/product-detail/3">
-                <img src="./assets/img/product-detail/quickview1.png">
+              <a routerLink="/product-detail/{{searchResult.pid}}">
+                <img src="{{searchResult.thumb}}">
               </a>
             </div>
             <div class="compare card-prd-bt smt">
-              <a routerLink="/product-detail/3">View detail</a>
+              <a routerLink="/product-detail/{{searchResult.pid}}">View detail</a>
             </div>
           </div>
         </div>
-        <div class="product-info col-8 pe-0">
-          <h6 class="mb-2">NOMA EARRING</h6>
-          <p class="mdt mb-3">$ 285.00</p>
-          <p class="smt">This earring in 14k yellow gold with square black diamond or emerald and round white diamond ships
-            immediately.14k white is made to order and ships in 4-10 business days.In a rush or have questions? Email
-            us at hello@shwjewelry.com. MATERIALS14 karat yellow or white gold set with one white diamond and one...</p>
+        <div class="product-info col-10 pe-0">
+          <h6 class="mb-2">{{searchResult.name}}</h6>
+          <p class="mdt mb-3">{{searchResult.price | currency: 'USD'}}</p>
+          <p class="smt">{{searchResult.description}}</p>
         </div>
-      </div>
-      <div class="line my-4"></div>
-      <div class="product-result row">
-        <div class="product-img col-4 ps-0">
-          <div class="card-prd">
-            <div class="img">
-              <a routerLink="/product-detail/3">
-                <img src="./assets/img/product-detail/quickview2.png">
-              </a>
-            </div>
-            <div class="compare card-prd-bt smt">
-              <a routerLink="/product-detail/3">View detail</a>
-            </div>
-          </div>
-        </div>
-        <div class="product-info col-8 pe-0">
-          <h6 class="mb-2">NOMA EARRING</h6>
-          <p class="mdt mb-3">$ 285.00</p>
-          <p class="smt">This earring in 14k yellow gold with square black diamond or emerald and round white diamond ships
-            immediately.14k white is made to order and ships in 4-10 business days.In a rush or have questions? Email
-            us at hello@shwjewelry.com. MATERIALS14 karat yellow or white gold set with one white diamond and one...</p>
-        </div>
-      </div>
-      <div class="line my-4"></div>
-      <div class="product-result row">
-        <div class="product-img col-4 ps-0">
-          <div class="card-prd">
-            <div class="img">
-              <a routerLink="/product-detail.3">
-                <img src="./assets/img/product-detail/quickview3.png">
-              </a>
-            </div>
-            <div class="compare card-prd-bt smt">
-              <a routerLink="/product-detail/3">View detail</a>
-            </div>
-          </div>
-        </div>
-        <div class="product-info col-8 pe-0">
-          <h6 class="mb-2">NOMA EARRING</h6>
-          <p class="mdt mb-3">$ 285.00</p>
-          <p class="smt">This earring in 14k yellow gold with square black diamond or emerald and round white diamond ships
-            immediately.14k white is made to order and ships in 4-10 business days.In a rush or have questions? Email
-            us at hello@shwjewelry.com. MATERIALS14 karat yellow or white gold set with one white diamond and one...</p>
-        </div>
-      </div>
-      <div class="line my-4"></div>
-      <div class="product-result row">
-        <div class="product-img col-4 ps-0">
-          <div class="card-prd">
-            <div class="img">
-              <a routerLink="/product-detail.3">
-                <img src="./assets/img/product-detail/quickview1.png">
-              </a>
-            </div>
-            <div class="compare card-prd-bt smt">
-              <a routerLink="/product-detail/3">View detail</a>
-            </div>
-          </div>
-        </div>
-        <div class="product-info col-8 pe-0">
-          <h6 class="mb-2">NOMA EARRING</h6>
-          <p class="mdt mb-3">$ 285.00</p>
-          <p class="smt">This earring in 14k yellow gold with square black diamond or emerald and round white diamond ships
-            immediately.14k white is made to order and ships in 4-10 business days.In a rush or have questions? Email
-            us at hello@shwjewelry.com. MATERIALS14 karat yellow or white gold set with one white diamond and one...</p>
-        </div>
-      </div>
-      <div class="line my-4"></div>
-      <div class="product-result row">
-        <div class="product-img col-4 ps-0">
-          <div class="card-prd">
-            <div class="img">
-              <a routerLink="/product-detail/3">
-                <img src="./assets/img/product-detail/quickview1.png">
-              </a>
-            </div>
-            <div class="compare card-prd-bt smt">
-              <a routerLink="/product-detail/3">View detail</a>
-            </div>
-          </div>
-        </div>
-        <div class="product-info col-8 pe-0">
-          <h6 class="mb-2">NOMA EARRING</h6>
-          <p class="mdt mb-3">$ 285.00</p>
-          <p class="smt">This earring in 14k yellow gold with square black diamond or emerald and round white diamond ships
-            immediately.14k white is made to order and ships in 4-10 business days.In a rush or have questions? Email
-            us at hello@shwjewelry.com. MATERIALS14 karat yellow or white gold set with one white diamond and one...</p>
-        </div>
+        <div class="line my-4"></div>
       </div>
     </div>
-    <div class="col-2"></div>
+
   </div>
+</div>
+
+<!--Back to top-->
+<div class="to-top" (click)="scrollToTop()" [ngClass]="{ 'show-scrollTop': windowScrolled }">
+  <span>Back to top</span><i class="fa fa-arrow-circle-up fa-3x"></i>
 </div>
 
 
