--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -151,11 +151,11 @@
                   <p class="mdt">$11,700.00</p>
                 </div>
                 <div class="row">
-                  <div class="col-6">
-                    <button class="btn btn-pri btnlg mt-3" type="button" data-bs-dismiss="offcanvas">Continue shopping</button>
+                  <div class="col-6 ps-0">
+                    <button class="btn btn-sec btnlg mt-3 w-100" type="button" routerLink="/cart">View cart</button>
                   </div>
-                  <div class="col-6">
-                    <button class="btn btn-pri btnlg mt-3" type="button" routerLink="/check-out">Proceed to checkout</button>
+                  <div class="col-6 pe-0">
+                    <button class="btn btn-pri btnlg mt-3 w-100" type="button" routerLink="/check-out">Checkout</button>
                   </div>
                 </div>
               </div>
