--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -6,12 +6,16 @@
     <div class="row">
       <div class="col-2">
         <div class="mbt" *ngFor="let item of product">
-          <img src="{{item.url}}">
+          <img src="{{item.url}}" (click)="zoom(item)">
         </div>
       </div>
-      <div class="col-6" *ngFor="let item of product | slice:0:1">
-        <img src="{{item.url}}">
+      <div class="col-6" *ngIf="zoomed">
+        <img src="{{zoomed.url}}">
       </div>
+      <div class="col-6" *ngIf="!zoomed">
+        <img src="./assets/img/default.png">
+      </div>
+
       <div class="col-4" *ngFor="let item of product | slice: 0: 1">
         <!--Breadcrumb-->
         <nav aria-label="breadcrumb">
