--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -491,9 +491,9 @@
       <div class="col-4 text-center">
         <div class="px-4">
           <i class="fa-regular fa-calendar fa-2x"></i>
-          <p class="mdt mb-0 mt-3 mb-2">Book an Appointment</p>
-          <p class="smt">We’re happy to help with in-store or virtual appointments</p>
-<!--          <a class="decor-text" routerLink="#">Book now <i class="fa-solid fa-arrow-right"></i></a>-->
+          <p class="mdt mb-0 mt-3 mb-2">Aguri At Your Service</p>
+          <p class="smt">Our client care experts are always here to help.</p>
+           <a class="decor-text" routerLink="/contact">Contact us<i class="fa-solid fa-arrow-right"></i></a>
         </div>
       </div>
       <div class="col-4 text-center pe-0">
