--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -149,18 +149,18 @@
       <div class="col-2">
         <ul>
           <li><p class="mdt">Explore</p></li>
-          <li class="mb-1" routerLink="/home">Home</li>
-          <li class="mb-1" routerLink="/about-us">About us</li>
-          <li class="mb-1" routerLink="/guide">Jewellery guide</li>
+          <li class="mb-1"><a routerLink="/">Home</a></li>
+          <li class="mb-1"><a routerLink="/about-us">About us</a></li>
+          <li class="mb-1"><a routerLink="/guide">Jewellery guide</a></li>
         </ul>
       </div>
       <div class="col-2">
         <ul>
           <li><p class="mdt">Jewellery</p></li>
-          <li class="mb-2" routerLink="/category/1">Rings</li>
-          <li class="mb-2" routerLink="/category/2">Earrings</li>
-          <li class="mb-2" routerLink="/category/3">Bracelets</li>
-          <li class="mb-2" routerLink="/category/4">Necklaces</li>
+          <li class="mb-2"><a routerLink="/category/1">Rings</a></li>
+          <li class="mb-2"><a routerLink="/category/2">Earrings</a></li>
+          <li class="mb-2"><a routerLink="/category/3">Bracelets</a></li>
+          <li class="mb-2"><a  routerLink="/category/4">Necklaces</a></li>
         </ul>
       </div>
       <div class="col-2">
