--- a/src/app/pages/category/category.component.html
+++ b/src/app/pages/category/category.component.html
@@ -191,7 +191,7 @@
                         <option value="6">5 1/2</option>
                       </select>
                     </div>
-                    <input type="submit" class="btn btn-pri my-3" value="Add to bag">
+                    <input type="submit" class="btn btn-pri my-3" value="Add to bag" data-bs-dismiss="modal">
                   </form>
                   <p class="mt-2">View more detail <a routerLink="/product-detail/{{quickviewed.pid}}" data-bs-dismiss="modal">
                     <i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
