--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -128,7 +128,7 @@
                     <p>Amel Earring</p>
                   </div>
                   <div class="col-3 pe-0">
-                    <span class="fa-xmark">x</span><input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="1">
+                    x<input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="1">
                     <p>$5,000.00</p>
                     <i class="fas fa-trash-alt"></i>
                   </div>
@@ -144,7 +144,7 @@
                     <p>Diamons And Gold Spark Ring</p>
                   </div>
                   <div class="col-3 pe-0">
-                    <span class="fa-xmark">x</span><input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="1">
+                    x<input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="1">
                     <p>$6,700.00</p>
                     <i class="fas fa-trash-alt"></i>
                   </div>
@@ -156,7 +156,7 @@
                 </div>
                 <div class="row">
                   <div class="col-6 ps-0">
-                    <button class="btn btn-sec btnlg mt-3 w-100" type="button" routerLink="/cart">View cart</button>
+                    <button class="btn btn-sec btnlg mt-3 w-100" type="button" routerLink="/cart">View bag</button>
                   </div>
                   <div class="col-6 pe-0">
                     <button class="btn btn-pri btnlg mt-3 w-100" type="button" routerLink="/check-out">Checkout</button>
@@ -275,7 +275,28 @@
                     <p class="mdt mb-1">Material</p>
                     <p class="smt">{{product.material}}</p>
                   </div>
-                  <button type="button" class="btn btn-pri btnsm w-100" data-bs-dismiss="modal" onclick="alert('The product was successfully added to bag!!')">Add to bag</button>
+                  <div class="line mb-3"></div>
+
+                  <form onsubmit="alert('The product was successfully added to bag!!')">
+                    <div class="d-flex">
+                      <p class="mdt me-auto">Quantity</p>
+                      <span class="buttons_added ml-1 qty-box">
+                        <input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="" required>
+                       </span>
+                    </div>
+                    <div class="quick-size mb-3">
+                      <select class="form-select smt" required>
+                        <option value="">Select size</option>
+                        <option value="1">3</option>
+                        <option value="2">3 1/2</option>
+                        <option value="3">4</option>
+                        <option value="4">4 1/2</option>
+                        <option value="5">5</option>
+                        <option value="6">5 1/2</option>
+                      </select>
+                    </div>
+                    <input type="submit" class="btn btn-pri btnsm w-100" value="Add to bag">
+                  </form>
                 </div>
                 <div class="col-6 simi-right" *ngIf="comparedProduct">
                   <div class="itm">
@@ -298,7 +319,28 @@
                     <p class="mdt mb-1">Material</p>
                     <p class="smt">{{comparedProduct.material}}</p>
                   </div>
-                  <button type="button" class="btn btn-pri btnsm w-100" data-bs-dismiss="modal" onclick="alert('The product was successfully added to bag!!')">Add to bag</button>
+                  <div class="line mb-3"></div>
+
+                  <form onsubmit="alert('The product was successfully added to bag!!')">
+                    <div class="d-flex">
+                      <p class="mdt me-auto">Quantity</p>
+                      <span class="buttons_added ml-1 qty-box">
+                        <input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="" required>
+                       </span>
+                    </div>
+                    <div class="quick-size mb-3">
+                      <select class="form-select smt" required>
+                        <option value="">Select size</option>
+                        <option value="1">3</option>
+                        <option value="2">3 1/2</option>
+                        <option value="3">4</option>
+                        <option value="4">4 1/2</option>
+                        <option value="5">5</option>
+                        <option value="6">5 1/2</option>
+                      </select>
+                    </div>
+                    <input type="submit" class="btn btn-pri btnsm w-100" value="Add to bag">
+                  </form>
                 </div>
               </div>
             </div>
@@ -427,7 +469,7 @@
                   <option value="6">5 1/2</option>
                 </select>
               </div>
-              <input type="submit" class="btn btn-pri my-3" value="Add to bag">
+              <input type="submit" class="btn btn-pri my-3" value="Add to bag"  data-bs-dismiss="modal">
             </form>
             <p class="mt-2">View more detail <a routerLink="/product-detail/{{quickviewed.pid}}" data-bs-dismiss="modal">
               <i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
